--- a/DesktopApp/src/edu/esprit/gui/FXMLstatistiquesCompetition.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLstatistiquesCompetition.fxml
@@ -5,11 +5,14 @@
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="606.0" prefWidth="877.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLstatistiquesCompetitionController">
+<AnchorPane id="AnchorPane" prefHeight="626.0" prefWidth="1088.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLstatistiquesCompetitionController">
    <children>
-      <BarChart fx:id="chartRsult" layoutX="167.0" layoutY="128.0" prefHeight="390.0" prefWidth="453.0" styleClass="default-color0" stylesheets="@styles/fxmlmaktabti.css" title="resultat de quiz">
+      <BarChart fx:id="chartRsult" layoutX="335.0" layoutY="159.0" prefHeight="431.0" prefWidth="612.0" styleClass="default-color0" stylesheets="@styles/fxmlmaktabti.css" title="resultat de quiz">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
@@ -17,7 +20,20 @@
           <NumberAxis side="LEFT" />
         </yAxis>
       </BarChart>
-      <ComboBox fx:id="competition" layoutX="461.0" layoutY="55.0" prefHeight="31.0" prefWidth="145.0" promptText="selectionerResultat" styleClass="combo-box" stylesheets="@styles/fxmlmaktabti.css" />
-      <Label fx:id="datesemaine" layoutX="182.0" layoutY="75.0" text="Dates de la semaine" />
+      <ComboBox fx:id="competition" layoutX="740.0" layoutY="75.0" prefHeight="49.0" prefWidth="207.0" promptText="selectionerResultat" styleClass="combo-box" stylesheets="@styles/fxmlmaktabti.css" />
+      <Label fx:id="datesemaine" layoutX="376.0" layoutY="86.0" text="Dates de la semaine">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Label fx:id="datesemaine1" layoutX="167.0" layoutY="30.0" text="Statistique">
+         <font>
+            <Font name="System Bold" size="35.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="81.0" fitWidth="88.0" layoutX="71.0" layoutY="11.0">
+         <image>
+            <Image url="@images/graph.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
