--- a/DesktopApp/src/edu/esprit/gui/Affichage.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Affichage.fxml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.AffichageController">
+<AnchorPane id="AnchorPane" prefHeight="624.0" prefWidth="1088.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.AffichageController">
    <children>
-      <ListView fx:id="idlist" layoutX="12.0" layoutY="24.0" prefHeight="359.0" prefWidth="288.0" />
-      <Button layoutX="379.0" layoutY="309.0" mnemonicParsing="false" onAction="#delete" prefHeight="54.0" prefWidth="107.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Delete" />
-      <Label layoutX="392.0" layoutY="30.0" text="Fidelité">
+      <ListView fx:id="idlist" layoutX="353.0" layoutY="69.0" prefHeight="359.0" prefWidth="288.0" />
+      <Button layoutX="444.0" layoutY="475.0" mnemonicParsing="false" onAction="#delete" prefHeight="54.0" prefWidth="107.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Delete">
+         <graphic>
+            <FontAwesomeIconView fill="#ebdede" glyphName="TRASH" size="20" />
+         </graphic></Button>
+      <Label layoutX="457.0" layoutY="14.0" text="Fidelité">
          <font>
             <Font name="System Bold" size="27.0" />
          </font>
