--- a/DesktopApp/src/edu/esprit/gui/FXMLAjouterCompetition.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLAjouterCompetition.fxml
@@ -30,9 +30,9 @@
       <TextField fx:id="recompense" layoutX="754.0" layoutY="181.0" prefHeight="31.0" prefWidth="218.0" promptText="Récompense" />
       <Label layoutX="631.0" layoutY="272.0" text="Livre" />
       <ListView fx:id="livre" layoutX="754.0" layoutY="252.0" prefHeight="200.0" prefWidth="218.0" />
-      <ImageView fx:id="retour" fitHeight="37.0" fitWidth="33.0" layoutX="58.0" layoutY="59.0" onMouseClicked="#retour">
+      <ImageView layoutX="28.0" layoutY="14.0" onMouseClicked="#back">
          <image>
-            <Image url="@images/back.png" />
+            <Image url="@images/arrow.png" />
          </image>
       </ImageView>
    </children>
