--- a/DesktopApp/src/edu/esprit/gui/FXMLAjouterMessagerie.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLAjouterMessagerie.fxml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="edu.esprit.gui.FXMLAjouterMessagerieController">
+<AnchorPane id="AnchorPane" prefHeight="500.0" prefWidth="800.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLAjouterMessagerieController">
    <children>
-      <TextField fx:id="text_message" layoutX="140.0" layoutY="127.0" prefHeight="133.0" prefWidth="371.0" />
-      <Label layoutX="62.0" layoutY="30.0" prefHeight="106.0" prefWidth="111.0" text="ID" />
-      <Label layoutX="43.0" layoutY="161.0" prefHeight="65.0" prefWidth="98.0" text="message" />
-      <Button fx:id="btn_ajouter" layoutX="434.0" layoutY="306.0" mnemonicParsing="false" onAction="#Ajoutermessage" text="Envoyer" />
-      <Button fx:id="btn_retour" layoutX="37.0" layoutY="306.0" mnemonicParsing="false" onAction="#returnhome" text="Retour" />
-      <ComboBox fx:id="id_utilis" layoutX="140.0" layoutY="70.0" onAction="#drop_id_utilis" prefWidth="150.0" />
+      <TextField fx:id="text_message" layoutX="167.0" layoutY="224.0" prefHeight="53.0" prefWidth="495.0" />
+      <Label layoutX="112.0" layoutY="101.0" prefHeight="38.0" prefWidth="44.0" text="ID:">
+         <font>
+            <Font name="System Bold" size="21.0" />
+         </font></Label>
+      <Button fx:id="btn_ajouter" layoutX="563.0" layoutY="290.0" mnemonicParsing="false" onAction="#Ajoutermessage" prefHeight="38.0" prefWidth="110.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Envoyer">
+         <graphic>
+            <FontAwesomeIconView fill="#e4e4e4" glyphName="SEND" size="20" />
+         </graphic></Button>
+      <ComboBox fx:id="id_utilis" layoutX="167.0" layoutY="101.0" onAction="#drop_id_utilis" prefHeight="38.0" prefWidth="159.0" />
+      <Label layoutX="64.0" layoutY="231.0" prefHeight="38.0" prefWidth="96.0" text="Message:">
+         <font>
+            <Font name="System Bold" size="21.0" />
+         </font>
+      </Label>
+      <ImageView layoutX="16.0" layoutY="14.0" onMouseClicked="#back">
+         <image>
+            <Image url="@images/arrow.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
