--- a/DesktopApp/src/edu/esprit/gui/FXMLAjouterReclamation.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLAjouterReclamation.fxml
@@ -4,19 +4,24 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="edu.esprit.gui.FXMLAjouterReclamationController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLAjouterReclamationController">
    <children>
-      <TextField fx:id="Feedback" layoutX="205.0" layoutY="91.0" prefHeight="31.0" prefWidth="281.0" promptText="votre feedback" />
-      <TextField fx:id="Message" layoutX="205.0" layoutY="193.0" prefHeight="122.0" prefWidth="281.0" promptText="votre message" />
+      <TextField fx:id="Feedback" layoutX="213.0" layoutY="91.0" prefHeight="31.0" prefWidth="281.0" promptText="votre feedback" />
+      <TextField fx:id="Message" layoutX="213.0" layoutY="195.0" prefHeight="122.0" prefWidth="281.0" promptText="votre message" />
       <Label layoutX="142.0" layoutY="96.0" prefHeight="21.0" prefWidth="71.0" text="Feedback" />
       <Label layoutX="142.0" layoutY="245.0" text="Message" />
-      <Button fx:id="Ajouter" layoutX="506.0" layoutY="336.0" mnemonicParsing="false" onAction="#btn_ajouter" text="Ajouter" />
-      <Button fx:id="btn_retour" layoutX="39.0" layoutY="336.0" mnemonicParsing="false" onAction="#returnbutton" text="Retour" />
-      <Button fx:id="btn_upload" layoutX="395.0" layoutY="141.0" mnemonicParsing="false" onAction="#handleUploadImage" text="Upload Image" />
-      <ComboBox fx:id="id_user" layoutX="205.0" layoutY="40.0" prefWidth="150.0" />
+      <Button fx:id="Ajouter" layoutX="506.0" layoutY="336.0" mnemonicParsing="false" onAction="#btn_ajouter" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Ajouter" />
+      <Button fx:id="btn_upload" layoutX="395.0" layoutY="141.0" mnemonicParsing="false" onAction="#handleUploadImage" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Upload Image" />
+      <ComboBox fx:id="id_user" layoutX="213.0" layoutY="24.0" prefWidth="150.0" />
       <Label layoutX="153.0" layoutY="44.0" text="Your Id" />
+      <ImageView fx:id="btn_retour" layoutX="15.0" layoutY="16.0" onMouseClicked="#returnbutton">
+         <image>
+            <Image url="@images/arrow.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
