--- a/DesktopApp/src/edu/esprit/gui/FXMLCommande.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLCommande.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -8,19 +9,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLCommandeController">
+<AnchorPane id="AnchorPane" prefHeight="626.0" prefWidth="1088.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLCommandeController">
     <stylesheets>
         <URL value="@fxmlcommande.css" />
     </stylesheets>
    <children>
-      <Label fx:id="labelCommande" layoutX="51.0" layoutY="29.0" prefHeight="19.0" prefWidth="200.0" text="Listes des commandes " underline="true">
+      <Label fx:id="labelCommande" layoutX="476.0" layoutY="40.0" prefHeight="39.0" prefWidth="432.0" text="Listes des commandes ">
          <font>
-            <Font name="Al Nile" size="18.0" />
+            <Font size="34.0" />
          </font>
          <effect>
             <Bloom />
          </effect></Label>
-      <ListView fx:id="commandeView" layoutX="23.0" layoutY="75.0" prefHeight="200.0" prefWidth="269.0" styleClass="textArea" stylesheets="@styles/fxmlcommande.css" />
-      <Button fx:id="button_modifierCommande" layoutX="337.0" layoutY="151.0" mnemonicParsing="false" onAction="#modfier" prefHeight="27.0" prefWidth="92.0" styleClass="button_modif" stylesheets="@styles/fxmlcommande.css" text="Modifier" />
+      <ListView fx:id="commandeView" layoutX="181.0" layoutY="143.0" prefHeight="340.0" prefWidth="363.0" styleClass="textArea" stylesheets="@styles/fxmlcommande.css" />
+      <Button fx:id="button_modifierCommande" layoutX="692.0" layoutY="267.0" mnemonicParsing="false" onAction="#modfier" prefHeight="60.0" prefWidth="110.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Modifier">
+         <graphic>
+            <FontAwesomeIconView fill="WHITE" glyphName="EDIT" size="20" />
+         </graphic></Button>
+      <FontAwesomeIconView glyphName="TRUCK" layoutX="400.0" layoutY="85.0" size="60" />
    </children>
 </AnchorPane>
