--- a/DesktopApp/src/edu/esprit/gui/FXMLModifierReclamation.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLModifierReclamation.fxml
@@ -3,23 +3,28 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="edu.esprit.gui.FXMLModifierReclamationController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLModifierReclamationController">
    <children>
       <TextField fx:id="Feedback" layoutX="206.0" layoutY="108.0" prefHeight="31.0" prefWidth="281.0" promptText="votre feedback" />
       <TextField fx:id="Message" layoutX="206.0" layoutY="186.0" prefHeight="122.0" prefWidth="281.0" promptText="votre message" />
       <Label layoutX="126.0" layoutY="113.0" prefHeight="21.0" prefWidth="71.0" text="Feedback" />
       <Label layoutX="132.0" layoutY="218.0" text="Message" />
-      <Button fx:id="Modifier" layoutX="502.0" layoutY="343.0" mnemonicParsing="false" onAction="#btn_modifier" text="Modifier" />
-      <Button fx:id="btn_retour" layoutX="35.0" layoutY="343.0" mnemonicParsing="false" onAction="#returnbutton" text="Retour" />
+      <Button fx:id="Modifier" layoutX="502.0" layoutY="343.0" mnemonicParsing="false" onAction="#btn_modifier" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Modifier" />
       <Text fill="#3f1ac6" layoutX="162.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Modifier Reclamation">
          <font>
             <Font size="29.0" />
          </font>
       </Text>
+      <ImageView fx:id="btn_retour" layoutX="20.0" layoutY="14.0" onMouseClicked="#returnbutton">
+         <image>
+            <Image url="@images/arrow.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
