--- a/DesktopApp/src/edu/esprit/gui/FXMLQuestion.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLQuestion.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -15,5 +17,10 @@
             <Font size="40.0" />
          </font>
       </Label>
+      <ImageView layoutX="46.0" layoutY="26.0" onMouseClicked="#retour">
+         <image>
+            <Image url="@images/arrow.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
